[gd_scene load_steps=8 format=2]

[ext_resource path="res://Data/Enemies/Demon/Run Sprite Sheet.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Demon.gd" type="Script" id=2]
[ext_resource path="res://Objects/Particles.tscn" type="PackedScene" id=3]

[sub_resource type="Animation" id=40]
resource_name = "Attack"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("RayCastRight:enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=33]
resource_name = "Run"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("RayCastRight:enabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="RectangleShape2D" id=30]
extents = Vector2( 10, 11.25 )

[sub_resource type="RectangleShape2D" id=31]
extents = Vector2( 10, 12.5 )

[node name="Demon" type="KinematicBody2D"]
position = Vector2( 46, 150 )
collision_layer = 4
script = ExtResource( 2 )
color = Color( 0.486275, 0.129412, 0.129412, 1 )
particles_tscn = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Run"
playback_speed = 2.0
anims/Attack = SubResource( 40 )
anims/Run = SubResource( 33 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4.25 )
shape = SubResource( 30 )

[node name="RayCastRight" type="RayCast2D" parent="."]
cast_to = Vector2( 11, 0 )
collision_mask = 3

[node name="KillArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillArea"]
position = Vector2( 0, 2.5 )
shape = SubResource( 31 )

[node name="KnockbackTimer" type="Timer" parent="."]
wait_time = 0.15

[connection signal="is_dead" from="." to="." method="_on_Demon_is_dead"]
[connection signal="area_entered" from="KillArea" to="." method="_on_KillArea_area_entered"]
[connection signal="timeout" from="KnockbackTimer" to="." method="_on_KnockbackTimer_timeout"]
